@@ -3774,3 +3774,6 @@ Changelog for GXemul:
 		Continuing on Dreamcast PowerVR register names, etc.
 20081208	Beginning on a osiop (NCR 53C710 SCSI) device skeleton.
 20081210	The SH4 Store Queue memory area is 0x04000000 long, not 0x40.
+20081211	OpenBSD/m88k's badaddr() should now be able to detect
+		invalid addresses; memory_rw.c causes exceptions on reads
+		that fail (but no actual address is supplied yet).
